# hybrid-render-pipeline

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  LICENSE  README.md  vcpkg.json
Benchmark/: README.md  general_performance_benchmark.csv  general_performance_benchmark.md
shaders/: basic_3d.frag  basic_3d.vert  cloud_composite.frag  debug_overlay.frag  fullscreen_tri.vert  gtao_plus.comp  hi_z_build.comp  hi_z_reflections.comp  rt_composite.frag  rt_composite.vert  screen_space_gi.comp  shadow_depth.frag  shadow_depth.vert  skybox.frag  skybox.vert  solid_color.frag  temporal_denoise.comp  terrain.frag  terrain.vert  ui.frag  ui.vert  volumetric_atmosphere.comp  volumetric_clouds.comp  volumetric_integrate.comp  volumetric_light.frag
src/: Camera.cpp  Camera.hpp  ErrorCodes.hpp  Frustum.hpp  Input.cpp  Input.hpp  Log.cpp  Log.hpp  Platform.cpp  Platform.hpp  Renderer.cpp  Renderer.hpp  ScreenSpaceEffects.cpp  ScreenSpaceEffects.hpp  Types.cpp  Types.hpp  main.cpp
